# DoggyGallery

./: .gitignore  Cargo.toml  README.md  justfile  test-server.sh
src/: api.rs  archives.rs  auth.rs  config.rs  constants.rs  embedded.rs  handlers.rs  main.rs  models.rs  rate_limiter.rs  security_headers.rs  templates.rs  tls.rs
static/: faq.html  filter.html  random.html
static/css/: lightbox.css  main.css
static/js/: api.js  lightbox.js  music-player.js  utils.js
templates/: gallery.html  music_player.html
